--- a/bower.json
+++ b/bower.json
@@ -17,9 +17,6 @@
     "tests"
   ],
   "dependencies": {
-    "kilo-core": "git@github.com:shaunwest/kilo-core.git",
-    "kilo-extra": "git@github.com:shaunwest/kilo-extra.git",
-    "kilo-scheduler": "git@github.com:shaunwest/kilo-scheduler.git",
-    "kilo-flow": "git@github.com:shaunwest/kilo-flow.git"
+    "kilo-all": "git@github.com:shaunwest/kilo-all.git"
   }
 }
