--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gulp": "^3.8.10",
     "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.4.1",
+    "gulp-inject": "^1.2.0",
     "gulp-karma": "0.0.4",
     "gulp-rename": "^1.2.0",
     "gulp-uglify": "^1.0.1",
