--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "dist/kitties.js",
   "dependencies": {},
   "devDependencies": {
+    "babelify": "^6.0.2",
+    "browserify": "^9.0.8",
     "gulp": "^3.8.10",
+    "gulp-babel": "^5.1.0",
     "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.4.1",
     "gulp-inject": "^1.2.0",
@@ -15,7 +18,9 @@
     "karma": "^0.12.25",
     "karma-jasmine": "^0.2.3",
     "karma-phantomjs-launcher": "^0.1.4",
-    "run-sequence": "^1.0.1"
+    "run-sequence": "^1.0.1",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
